Change side menu and add active class

--- a/plugin/assets/css/styles.css
+++ b/plugin/assets/css/styles.css
@@ -95,6 +95,8 @@
 .logo a {
     display: inline-block;
     max-width: 120px;
+	background: #ffffff;
+	border-radius: 12px
 }
 
 .metismenu >li >a {
